--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -27,14 +27,13 @@
         </div>
         <br>
 
-        <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
-            <div class="btns">
-                <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit </a>
-                <form method="POST" action="/listings/<%= listing._id%>?_method=DELETE">
-                    <button class="btn btn-dark  offset-4">Delete</button>
-                </form>
-            </div>
-
+        <% if (currUser && listing && listing.owner && currUser._id && listing.owner._id) { %>
+          <div class="btns">
+            <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+            <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+              <button class="btn btn-dark  offset-4">Delete</button>
+            </form>
+          </div>
         <% } %>
                 <hr>
 
