--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -9,6 +9,7 @@
         <div class="f-info-links">
             <a href="/privacy">Privacy </a>
             <a href="/terms">Terms</a>
+            <p> Made by Sachin </p>
         </div>
     </div>
 </footer>
